--- a/ontoCAT/.classpath
+++ b/ontoCAT/.classpath
@@ -76,6 +76,10 @@
 	<classpathentry kind="lib" path="lib/HermiT/org.semanticweb.HermiT.jar"/>
 	<classpathentry kind="lib" path="lib/owlapi-3.2.2/owlapi-bin.jar" sourcepath="lib/owlapi-3.2.2/owlapi-src.jar"/>
 	<classpathentry kind="lib" path="lib/owlapi-3.2.2/owlapi-src.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
